# fastapi-chatbot-template

./: README.md  analysis.py  config.json  data.csv  index.html  log.txt  notes.txt  project_plan.docx  report.md  requirements.txt  script.ps1  summary.docx
.cursor/rules/: rule_location.mdc
backend/: .env.example  README.md  pyproject.toml  requirements.txt  start.sh
backend/api/: __init__.py  main.py
backend/api/routers/: __init__.py  chat_route.py  keyword_search_route.py
docs/: CUSTOMIZATION.md
frontend/: .env.example  README.md  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/aboutus/: page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/keyword/: page.tsx
